--- a/index.html
+++ b/index.html
@@ -169,12 +169,12 @@
         <div class="username">@reogkita</div>
         <p>Ikuti akun Instagram kami untuk melihat konten menarik.</p>
         
-        <a href="https://www.instagram.com/reogkita?igsh=MXRjcGx1dHliYTk3Nw==" class="btn" target="_blank">
+        <a href="https://www.instagram.com/gokiil__?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="btn" target="_blank">
             <i class="fab fa-instagram"></i> Kunjungi Profil Instagram
         </a>
         
         <div class="footer">
-            © 2020 Reog Kita. Seluruh hak cipta dilindungi.
+            © 2025 gokiil__. Seluruh hak cipta dilindungi.
         </div>
     </div>
 
