--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
         <div class="profile-icon floating">
             <i class="fas fa-user"></i>
         </div>
-        <h1>kreator digital</h1>
-        <div class="username">@reogkita</div>
+        <h1>profile digital</h1>
+        <div class="username">@gokiil__</div>
         <p>Ikuti akun Instagram kami untuk melihat konten menarik.</p>
         
         <a href="https://www.instagram.com/gokiil__?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" class="btn" target="_blank">
@@ -174,7 +174,7 @@
         </a>
         
         <div class="footer">
-            © 2025 gokiil__. Seluruh hak cipta dilindungi.
+            © 2025 Seluruh hak cipta dilindungi.
         </div>
     </div>
 
