--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ https://templatemo.com/tm-596-electric-xtra
                     <p class="subtitle">Enter the next dimension of digital innovation</p>
                 </div>
                 <div class="text-set">
-                    <h1 class="glitch-text" data-text="BEYOND LIMITS">BEYOND LIMITS</h1>
+                    <h1 class="glitch-text" data-text=" LIMITS">Muhammad Fatkhul Amin</h1>
                     <p class="subtitle">Where technology meets infinite possibilities</p>
                 </div>
                 <div class="text-set">
@@ -275,4 +275,5 @@ https://templatemo.com/tm-596-electric-xtra
     </footer>
 <script src="templatemo-electric-scripts.js"></script>
 </body>
+
 </html>
