--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@ https://templatemo.com/tm-596-electric-xtra
         <div class="hero-content">
             <div class="text-rotator">
                 <div class="text-set active">
-                    <h1 class="glitch-text" data-text="FUTURE IS NOW">FUTURE IS NOW</h1>
+                    <h1 class="glitch-text" data-text="FUTURE IS NOW">🪐Muhammad Fatkhul Amin🌏</h1>
                     <p class="subtitle">Enter the next dimension of digital innovation</p>
                 </div>
                 <div class="text-set">
-                    <h1 class="glitch-text" data-text=" LIMITS">Muhammad Fatkhul Amin</h1>
+                    <h1 class="glitch-text" data-text=" LIMITS">FUTURE IS NOW</h1>
                     <p class="subtitle">Where technology meets infinite possibilities</p>
                 </div>
                 <div class="text-set">
@@ -277,3 +277,4 @@ https://templatemo.com/tm-596-electric-xtra
 </body>
 
 </html>
+
